<resources>
    <string name="app_name">看看</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="news_str">新闻</string>
    <string name="meitu_str">美图</string>
    <string name="save_text">保存</string>
    <string name="yingxun_str">影讯</string>
    <string name="str_casts">影人</string>
    <string name="str_photo">剧照</string>

    <string name="login_success">登陆成功</string>
    <string name="login">登录</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">忘记密码?</string>
    <string name="go">登录</string>
    <string name="repeat_password">再次输入密码</string>
    <string name="next">完成</string>
    <string name="register_"><u>注册</u></string>
    <string name="register">注册</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="user_info">退出登录</string>
    <string name="user_string">用户</string>
    <string name="phone">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="send_auth_code_str">发送验证码</string>
    <string name="baisibudejie_str">百思不得姐</string>

</resources>
