<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/menu_navigation_one_group">
        <item
            android:id="@+id/menu_navigation_news"
            android:checkable="true"
            android:icon="@drawable/ic_news_logo"
            android:title="@string/news_str"/>
        <item
            android:id="@+id/menu_navigation_imgs"
            android:checkable="true"
            android:icon="@drawable/ic_image_icon"
            android:title="@string/meitu_str"/>
        <item
            android:id="@+id/menu_navigation_movies"
            android:checkable="true"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/yingxun_str"/>
    </group>
</menu>
