<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_code_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/send_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/header_view_login_selector"
            android:text="@string/send_auth_code_str"
            android:textColor="@android:color/white"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/send_code_btn"
            android:layout_toStartOf="@id/send_code_btn">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/auth_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/auth_code"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>
</LinearLayout>